...
        android:layout_marginEnd="56dp"
        android:text="@string/all_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityTaskMasterTextView" />

    <Button
        android:id="@+id/mainActivityAddTaskBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="288dp"
        android:text="@string/add_task"
        app:layout_constraintStart_toStartOf="parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityTaskMasterTextView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/MainActivityRecyclerViewTaskModel"
        android:layout_width="115dp"
        android:layout_height="157dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="312dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
...
